<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="hu.ait.dininghallmenu.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_detail"
            app:destination="@id/navigation_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_menu"
        android:name="hu.ait.dininghallmenu.ui.menu.MenuFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_chat"
        android:name="hu.ait.dininghallmenu.ui.chat.ChatFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/navigation_detail"
        android:name="hu.ait.dininghallmenu.ui.home.DetailFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_detail" />
</navigation>